# csgmcmc-jax

./: .gitignore  README.md  README_jax.md  pyproject.toml
benchmarks/: bench_samplers.py
csgmcmc_jax/: __init__.py  download.py  ensemble.py  toy_mog.py  train_cifar.py
csgmcmc_jax/samplers/: __init__.py  blackjax_backend.py  cyclical.py  jax_backend.py
tests/: test_cifar_smoke.py  test_samplers.py
