[project]
name = "csgmcmc-jax"
version = "0.1.0"
description = "JAX/Equinox port of Cyclical Stochastic Gradient MCMC (Zhang et al., ICLR 2020)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax>=0.4.30",
    "equinox>=0.11",
    "blackjax>=1.2",
    "optax>=0.2",
    "numpy>=1.24",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.7", "scipy>=1.10"]

[tool.setuptools.packages.find]
include = ["csgmcmc_jax*"]
